Updated some styles, aligned to mobile. Fixing for desktop now

--- a/src/index.css
+++ b/src/index.css
@@ -5,27 +5,16 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+  font-family: 'Stolzl', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Stolzl', sans-serif;
 }
 
 code {
   font-family: 'BDR Mono', source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-:root {
-  --red: #FE1D5B;
-  --blue: #1A28D1;
-  --green: #11F487;
-  --black: #010101;
-  }
-
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Manofa', serif;
-    font-weight: 200;
-    font-style: normal;
-
   }
